src/scss/main.scss
/* ... */
.custom-navigation {
	display: block;
	height: 400px;
	margin: 0 auto;
	max-width: 1300px;
	@include mq(sm){

	}

	.arrow {
		display: inline-block;
		opacity: 0.4;
		position: relative;
		transition: all 0.2s;
		vertical-align: middle;
		z-index: 10;
		img{
			height: 75px;
			width: 75px;
			@include mq(md){
				height: 150px;
				width: 150px;
			}
		}
		&.left {
			float: left;
		}
		&.right {
			float: right;
		}
		&:hover {
			opacity: 1;
		}
	}
}


.section.about {
	padding-top: 18px;
}

.section-header {
	color: $dark-text;
	font-family: NunitoSansBold, sans-serif;
	font-size: 24px;
	text-align: center;
	text-transform: uppercase;

}

.section-subheader {
	color: $brand-yellow;
	font-family: NunitoSansBold, sans-serif;
	font-size: 18px;
	margin: 0;
	text-align: center;
	text-transform: uppercase;
	transition: color 0.2s;
	&:hover {
		color: $rollover-yellow;
	}
}

.copy {
	color: $brand-brown;
	display: block;
	font-family: NunitoSansLight, sans-serif;
	font-size: 18px;
	line-height: 1.22em;
	margin: 0 auto 23px;
	max-width: 700px;
	text-align: center;

	a {
		color: $brand-yellow;
		text-decoration: none;
	}
}
.copy-list {
	color: $brand-brown;
	display: block;
	font-family: NunitoSansLight, sans-serif;
	font-size: 18px;
	line-height: 1.22em;
	margin: 0 auto 23px;
	max-width: 700px;
	text-align: left;

	li {
		margin-bottom: 10px;
	}
}

.copy:last-child {
	margin-bottom: 0;
}

.section.conf-dates {
	background-color: $brand-brown;
	font-family: NunitoSans, sans-serif;
	padding-top: 22px;
	text-align: center;
}

.conf-header {
	color: $brand-yellow;
	display: block;
	padding-right: 15px;
	text-transform: uppercase;
	@include mq(sm){
		display: inline;
	}
}
.conf-copy {
	color: $brand-cream;
	font-size: 24px;
	margin-bottom: 2px;
}

.conf-contact {
	@extend .conf-copy;
	font-size: 18px;
	padding: 13px 0 15px;

	a {
		color: $brand-yellow;
		padding-right: 10px;
	}
}

// Speaker section

.section.speakers {
	padding-top: 10px;
	.row {
		margin-bottom: 8px;
		margin-top: 32px;
		@include mq(sm) {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
			text-align: center;
		}
		@include mq(md) {
			flex-wrap: nowrap;
		}
	}
}

.speaker-container {
	display: block;
	@include mq(sm) {
		display: inline-block;
		max-width: 150px;
	}
}

.speaker-name {
	color: $brand-yellow;
	font-family: NunitoSansBold, sans-serif;
	font-size: 20px;
	margin-bottom: 0;
	text-transform: uppercase;
	transition: color 0.2s;
	&:hover {
		color: $rollover-yellow;
	}
}

.speaker-img {
	background-size: contain;
	height: 150px;
	margin: 0 auto;
	transition: all 0.2s;
	width: 150px;

	&.eric-evans {
		background-image: url('../img/speakers/Eric-Evans-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Eric-Evans-ON.png');
		}
	}

	&.alberto-brandolini {
		background-image: url('../img/speakers/Alberto-Brandolini-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Alberto-Brandolini-ON.png');
		}
	}

	&.mathias-verraes {
		background-image: url('../img/speakers/Mathias-Verraes-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Mathias-Verraes-ON.png');
		}
	}

	&.vaughn-vernon {
		background-image: url('../img/speakers/Vaughn-Vernon-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Vaughn-Vernon-ON.png');
		}
	}

	&.rebecca-wirfs-brock {
		background-image: url('../img/speakers/Rebecca-Wirfs-Brock-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Rebecca-Wirfs-Brock-ON.png');
		}
	}

	&.julie-lerman {
		background-image: url('../img/speakers/Julie-Lerman-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Julie-Lerman-ON.png');
		}
	}

	&.ward-cunningham {
		background-image: url('../img/speakers/Ward-Cunningham-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Ward-Cunningham-ON.png');
		}
	}
  &.chris-richardson {
		background-image: url('../img/speakers/Chris-Richardson-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Chris-Richardson-ON.png');
		}
	}
  &.paul-rayner {
		background-image: url('../img/speakers/Paul-Rayner-OFF.png');

		&:hover {
			background-image: url('../img/speakers/Paul-Rayner-ON.png');
		}
	}
}

.speaker-details {
	color: $dark-text;
	font-family: NunitoSansLight, sans-serif;
	font-size: 16px;
}

.section.location {
	padding-bottom: 50px;
	padding-top: 10px;

	.section-header {
		margin-bottom: 18px;
	}
}

h2.conference-emphasis {
  text-transform: uppercase;
  font-style: italic;
  text-align: left;
  font-size: 20px;
  font-family: NunitoSansBold,sans-serif;
}

// Location section

.location-col {
	padding-bottom: 20px;
}
.location-img {
	display: block;
	margin: 0 auto 15px;
	max-width: 100%;
}

.read-more {
	background-image: url('../img/read-more-arrow.png');
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
	display: inline-block;
	margin-bottom: -2px;
	margin-left: 8px;
	opacity: 0.6;
	transition: all 0.2s;
	width: 18px;
	@include ir();
	&:hover {
		opacity: 1;
	}
}

footer {
	background-color: $brand-brown;
	color: $white-text;
	font-family: NunitoSans, sans-serif;
	padding-top: 15px;
	text-align: center;

	.container {
		background-image: url('../img/footer-maze.png');
		background-repeat: no-repeat;
		background-position: bottom center;
		background-size: contain;
	}

	.section-header {
		color: $white-text;
		padding-bottom: 15px;
	}
}

.sponsor-container {
	@include mq(sm) {
		display: flex;
		justify-content: space-between;
	}
}
/* we need to change this class name to benefactor so adblockers don't hide the images */
.benefactor-logo {
	display: block;
	margin: 10px auto;
	max-width: 80%;
	@include mq(sm) {
		display: inline-block;
	}
}

.container.page {
	margin: 0 auto;
	max-width: 600px;
	padding-bottom: 3em;

	.copy {
		text-align: left;
	}
}

.page-subheader {
	color: $dark-text;
	font-family: NunitoSansSemiBold, sans-serif;
	font-size: 18px;
	margin: 0 0 4px 0;
}
/* ... */

